--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^4.7.0",
     "@material-ui/icons": "^4.5.1",
     "bootstrap": "^4.3.1",
+    "mixin-deep": "^2.0.1",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-paypal-express-checkout": "^1.0.5",
@@ -13,6 +14,7 @@
     "react-router-dom": "^5.1.2",
     "react-scripts": "3.2.0",
     "redux": "^4.0.4",
+    "set-value": "^3.0.1",
     "styled-components": "^4.4.1"
   },
   "scripts": {
