--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@material-ui/core": "^4.7.0",
-    "@material-ui/icons": "^4.5.1",
+    "@material-ui/core": "^4.8.3",
     "bootstrap": "^4.3.1",
     "mixin-deep": "^2.0.1",
     "react": "^16.12.0",
@@ -12,7 +11,7 @@
     "react-paypal-express-checkout": "^1.0.5",
     "react-redux": "^7.1.3",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "3.2.0",
+    "react-scripts": "^3.3.0",
     "redux": "^4.0.4",
     "set-value": "^3.0.1",
     "styled-components": "^4.4.1"
